syntax = "proto3";
package pb;

service IPTablesService {
    rpc AddRule (AddRuleRequest) returns (AddRuleResponse);
    rpc RemoveRule (RemoveRuleRequest) returns (RemoveRuleResponse);
    rpc GetRulesByRef (GetRulesByRefRequest) returns (GetRulesByRefResponse);
}

message IPTRule {
    string Operation = 1;
    string Target = 2;
    string Chain = 3;
    string Protocol = 4;
    string In = 5;
    string Out = 6;
    string Source = 7;
    string Destination = 8;
    uint32 SourcePort = 9;
    uint32 DestinationPort = 10;
    string state = 11;
}

message AddRuleRequest {
    string Refid = 1;
    IPTRule Rule = 2;
}

message AddRuleResponse {
    string Error = 1;
}

message RemoveRuleRequest {
    string ID = 1;
}

message RemoveRuleResponse {
    string Error = 1;
}

message GetRulesByRefRequest {
    string Refid = 1;
}

message GetRulesByRefResponse {
    repeated IPTRule Rules = 1;
    string error = 2;
}
